--- a/flower.html
+++ b/flower.html
@@ -9,7 +9,7 @@
     <title>flowers</title>
 </head>
 <body class="container">
-  <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
+  <div id="text-section" class="hidden"><h1>Selamat Ulang Tahun, Asa!</p></div>
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
