--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 </head>
 <body>
     <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>A</span>
         <span>L</span>
-        <span>L</span>
         <span>O</span>
+        <span>‎ </span>
+        <span>A</span>
+        <span>S</span>
+        <span>A</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
     </div>
-    <div class="button">
-        <button>
-            <a href="flower.html">Klik disini</a>
-        </button>
-        
+    <br>
+    <a href="flower.html"><button class="button-85" role="button">Klik disini</button></a>
     </div>
 </body>
 </html>
