--- a/flower.html
+++ b/flower.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>flowers</title>
+    <title>Selamat Ulang Tahun, Asa!</title>
 </head>
 <body class="container">
   <div id="text-section" class="hidden"><h1>Selamat Ulang Tahun, Asa!</p></div>
