--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/image/flowers.png" type="image/x-icon">
     <title>Sebuah Hadiah</title>
 </head>
+
 <body>
-    <div class="greetings">
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>O</span>
-        <span>‎ </span>
-        <span>A</span>
-        <span>S</span>
-        <span>A</span>
+    <div id="countdown"></div>
+    <div id="content">
+        <div class="greetings">
+            <span>H</span>
+            <span>A</span>
+            <span>L</span>
+            <span>O</span>
+            <span>‎ </span>
+            <span>A</span>
+            <span>S</span>
+            <span>A</span>
+        </div>
+        <div class="description">
+            <span>Aku ada hadiah spesial buat kamu!!</span>
+        </div>
+        <br>
+        <a href="flower.html"><button class="button-85" role="button">Klik disini</button></a>
     </div>
-    <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
     </div>
-    <br>
-    <a href="flower.html"><button class="button-85" role="button">Klik disini</button></a>
-    </div>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
