--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/image/flowers.png" type="image/x-icon">
-    <title>Sebuah Hadiah</title>
+    <title>this page are not available</title>
 </head>
 
 <body>
