added new feature

--- a/flower.html
+++ b/flower.html
@@ -11,15 +11,23 @@
 </head>
 
 <body>
+  <audio id="main-audio" class="hidden" src="./assets/audio/posay.mp3" play loop></audio>
+  <div class="options" id="ops">
+    <p>Apakah Anda ingin memutar bersama audio?</p>
+    <button class="btn" onclick="loadFlower('yes')">Ya</button>
+    <button class="btn" onclick="loadFlower('no')">Tidak</button>
+  </div>
   <div id="flower-content">
     <div id="text-section-bersiap" class="hidden">
       <p>Bersiaplah...</p>
     </div>
     <div id="flower" class="container">
       <div id="text" class="hidden">
-          <div id="header"><h1>Selamat Ulang Tahun, Asa!</h1></div>
-          <br>
-          <div id="desc"></div>
+        <div id="header">
+          <h1>Selamat Ulang Tahun, Asa!</h1>
+        </div>
+        <br>
+        <div id="desc"></div>
       </div>
       <div class="space"></div>
       <div class="night"></div>
@@ -31,7 +39,7 @@
             <div class="flower__leaf flower__leaf--3"></div>
             <div class="flower__leaf flower__leaf--4"></div>
             <div class="flower__white-circle"></div>
-  
+
             <div class="flower__light flower__light--1"></div>
             <div class="flower__light flower__light--2"></div>
             <div class="flower__light flower__light--3"></div>
@@ -40,7 +48,7 @@
             <div class="flower__light flower__light--6"></div>
             <div class="flower__light flower__light--7"></div>
             <div class="flower__light flower__light--8"></div>
-  
+
           </div>
           <div class="flower__line">
             <div class="flower__line__leaf flower__line__leaf--1"></div>
@@ -51,7 +59,7 @@
             <div class="flower__line__leaf flower__line__leaf--6"></div>
           </div>
         </div>
-  
+
         <div class="flower flower--2">
           <div class="flower__leafs flower__leafs--2">
             <div class="flower__leaf flower__leaf--1"></div>
@@ -59,7 +67,7 @@
             <div class="flower__leaf flower__leaf--3"></div>
             <div class="flower__leaf flower__leaf--4"></div>
             <div class="flower__white-circle"></div>
-  
+
             <div class="flower__light flower__light--1"></div>
             <div class="flower__light flower__light--2"></div>
             <div class="flower__light flower__light--3"></div>
@@ -68,7 +76,7 @@
             <div class="flower__light flower__light--6"></div>
             <div class="flower__light flower__light--7"></div>
             <div class="flower__light flower__light--8"></div>
-  
+
           </div>
           <div class="flower__line">
             <div class="flower__line__leaf flower__line__leaf--1"></div>
@@ -77,7 +85,7 @@
             <div class="flower__line__leaf flower__line__leaf--4"></div>
           </div>
         </div>
-  
+
         <div class="flower flower--3">
           <div class="flower__leafs flower__leafs--3">
             <div class="flower__leaf flower__leaf--1"></div>
@@ -85,7 +93,7 @@
             <div class="flower__leaf flower__leaf--3"></div>
             <div class="flower__leaf flower__leaf--4"></div>
             <div class="flower__white-circle"></div>
-  
+
             <div class="flower__light flower__light--1"></div>
             <div class="flower__light flower__light--2"></div>
             <div class="flower__light flower__light--3"></div>
@@ -94,7 +102,7 @@
             <div class="flower__light flower__light--6"></div>
             <div class="flower__light flower__light--7"></div>
             <div class="flower__light flower__light--8"></div>
-  
+
           </div>
           <div class="flower__line">
             <div class="flower__line__leaf flower__line__leaf--1"></div>
@@ -103,14 +111,14 @@
             <div class="flower__line__leaf flower__line__leaf--4"></div>
           </div>
         </div>
-  
+
         <div class="grow-ans" style="--d:1.2s">
           <div class="flower__g-long">
             <div class="flower__g-long__top"></div>
             <div class="flower__g-long__bottom"></div>
           </div>
         </div>
-  
+
         <div class="growing-grass">
           <div class="flower__grass flower__grass--1">
             <div class="flower__grass--top"></div>
@@ -126,7 +134,7 @@
             <div class="flower__grass__overlay"></div>
           </div>
         </div>
-  
+
         <div class="growing-grass">
           <div class="flower__grass flower__grass--2">
             <div class="flower__grass--top"></div>
@@ -142,19 +150,19 @@
             <div class="flower__grass__overlay"></div>
           </div>
         </div>
-  
+
         <div class="grow-ans" style="--d:2.4s">
           <div class="flower__g-right flower__g-right--1">
             <div class="leaf"></div>
           </div>
         </div>
-  
+
         <div class="grow-ans" style="--d:2.8s">
           <div class="flower__g-right flower__g-right--2">
             <div class="leaf"></div>
           </div>
         </div>
-  
+
         <div class="grow-ans" style="--d:2.8s">
           <div class="flower__g-front">
             <div class="flower__g-front__leaf-wrapper flower__g-front__leaf-wrapper--1">
@@ -184,7 +192,7 @@
             <div class="flower__g-front__line"></div>
           </div>
         </div>
-  
+
         <div class="grow-ans" style="--d:3.2s">
           <div class="flower__g-fr">
             <div class="leaf"></div>
@@ -198,7 +206,7 @@
             <div class="flower__g-fr__leaf flower__g-fr__leaf--8"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--0">
           <div class="grow-ans" style="--d:3s">
             <div class="leaf leaf--0"></div>
@@ -213,7 +221,7 @@
             <div class="leaf leaf--3"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--1">
           <div class="grow-ans" style="--d:3.6s">
             <div class="leaf leaf--0"></div>
@@ -228,7 +236,7 @@
             <div class="leaf leaf--3"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--2">
           <div class="grow-ans" style="--d:4s">
             <div class="leaf leaf--0"></div>
@@ -243,7 +251,7 @@
             <div class="leaf leaf--3"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--3">
           <div class="grow-ans" style="--d:4s">
             <div class="leaf leaf--0"></div>
@@ -258,7 +266,7 @@
             <div class="leaf leaf--3"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--4">
           <div class="grow-ans" style="--d:4s">
             <div class="leaf leaf--0"></div>
@@ -273,7 +281,7 @@
             <div class="leaf leaf--3"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--5">
           <div class="grow-ans" style="--d:4s">
             <div class="leaf leaf--0"></div>
@@ -288,7 +296,7 @@
             <div class="leaf leaf--3"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--6">
           <div class="grow-ans" style="--d:4.2s">
             <div class="leaf leaf--0"></div>
@@ -303,7 +311,7 @@
             <div class="leaf leaf--3"></div>
           </div>
         </div>
-  
+
         <div class="long-g long-g--7">
           <div class="grow-ans" style="--d:3s">
             <div class="leaf leaf--0"></div>
