added a new feature

--- a/flower.html
+++ b/flower.html
@@ -12,7 +12,7 @@
 
 <body>
   <audio id="main-audio" class="hidden" src="./assets/audio/posay.mp3" play loop></audio>
-  <div class="options" id="ops">
+  <div class="options hidden" id="ops">
     <p>Apakah Anda ingin memutar bersama audio?</p>
     <button class="btn" onclick="loadFlower('yes')">Ya</button>
     <button class="btn" onclick="loadFlower('no')">Tidak</button>
