fixing a bug and added a new feature

--- a/flower.html
+++ b/flower.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <audio id="main-audio" class="hidden" src="./assets/audio/posay.mp3" play loop></audio>
+  <audio id="main-audio" class="hidden" src="./assets/audio/inside-out.mp3" loop></audio>
   <div class="options hidden" id="ops">
     <p>Apakah Anda ingin memutar bersama audio?</p>
     <button class="btn" onclick="loadFlower('yes')">Ya</button>
